# UnityVulkanPlugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/glad/: glad.h
src/: PlatformBase.hpp  TextureSubPlugin.cpp  TextureSubPluginAPI.cpp  TextureSubPluginAPI.hpp  TextureSubPluginAPI_D3D11.cpp  TextureSubPluginAPI_OpenGLCoreES.cpp  TextureSubPluginAPI_Vulkan.cpp
